--- a/static/css/style.css
+++ b/static/css/style.css
@@ -61,3 +61,11 @@
     designed on a 20 by 20 grid. */
   }
 
+  .footer {
+    position: relative;
+    bottom: 0;
+    width: 100%; 
+    height: 60px; /* Set the fixed height of the footer here */
+    line-height: 30px; /* Vertically center the text there */
+    background-color: #f5f5f5;
+  } 
